@@ -12,11 +12,12 @@
     selRange := format("[%d:0]", elem.'Selector Bits' - 1);
 ?>
 module <?= moduleName ?>
-<?- if (elem.Bits > 1) {
-    generics[0] := "Bits"; ?> #(
-    parameter Bits = 2
-)
+#(<?- if (elem.Bits > 1) {
+    generics[0] := "Bits"; ?>
+    parameter Bits = 2,
 <?- } ?>
+    parameter Default = 0 <? if (elem.Bits > 1) { generics[1] := "Default";} else {generics[0] := "Default";} ?>
+)
 (
     <?- for (i:=0; i<outCount; i++) { ?>
     output <?= bitRange ?>out_<?=i?>,
@@ -25,6 +26,6 @@ module <?= moduleName ?>
     input <?= bitRange ?>in
 );
 <?- for (i:=0; i<outCount; i++) {?>
-    assign out_<?= i ?> = (sel == <?= format("%d'h%x", elem.'Selector Bits', i) ?>)? in : 'd0;
+    assign out_<?= i ?> = (sel == <?= format("%d'h%x", elem.'Selector Bits', i) ?>)? in : Default;
 <?- } ?>
 endmodule
