@@ -1,5 +1,6 @@
 LIBRARY ieee;
 USE ieee.std_logic_1164.all;
+USE ieee.numeric_std.all;
 <?
   if (elem.Bits=1)
       export entityName:="DEMUX_GATE_"+elem.'Selector Bits';
@@ -9,9 +10,11 @@ USE ieee.std_logic_1164.all;
   outputs:=1<<elem.'Selector Bits';
 ?>
 entity <?=entityName?> is
+  generic (
   <?- if (elem.Bits>1) { ?>
-  generic ( Bits : integer );<?  vhdl.registerGeneric("Bits");?>
+    Bits : integer;<?  vhdl.registerGeneric("Bits");?>
   <?- } ?>
+    Default : integer );<?  vhdl.registerGeneric("Default");?>
   port (
     <?- for (i:=0;i<outputs;i++) {?>
     out_<?=i?>: out <?= vhdl.genericType(elem.Bits)?>;
@@ -23,6 +26,6 @@ end <?=entityName?>;
 architecture Behavioral of <?=entityName?> is
 begin
 <?- for (i:=0;i<outputs;i++) {?>
-    out_<?=i?> <= p_in when sel = <?= vhdl.value(i,elem.'Selector Bits')?> else <?= vhdl.zero(elem.Bits)?>;
+    out_<?=i?> <= p_in when sel = <?= vhdl.value(i,elem.'Selector Bits')?> else <? if (elem.Bits>1) { ?>std_logic_vector(to_unsigned(Default, Bits));<? } else {?>std_logic(to_unsigned(Default, 1)(0));<? } ?>
 <?- } ?>
 end Behavioral;
