@@ -62,7 +62,7 @@ public class VerilogSimulatorTest extends TestCase {
         File examples = new File(Resources.getRoot(), "/dig/hdl");
         try {
             int tested = new FileScanner(this::checkVerilogExport).noOutput().scan(examples);
-            assertEquals(51, tested);
+            assertEquals(53, tested);
         } catch (FileScanner.SkipAllException e) {
             // if iverilog is not installed its also ok
         }
