@@ -5,6 +5,7 @@ HEAD, planned as v0.30
 - Added a presentation mode.
 - The remote server is now disabled by default.
   It must be enabled in the settings.
+- Fixes the ignored default value in demuxer HDL export.
 
 v0.29, released on 11. February 2022
 - Allows loading byte base files in big-endian format.
